<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BioMarket</string>
    <string name="title_home">BioMarket</string>
    <string name="title_maps">Maps</string>
    <string name="title_basket">Basket</string>
    <string name="title_list">List</string>
    <string name="title_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_basket">BasketActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_toto_fragment">Hello toto fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_list_store">Store List</string>
    <string name="basket_discard">Delete Basket</string>
    <string name="basket_up">+1</string>
    <string name="basket_down">-1</string>
    <string name="basket_new">Add</string>
    <string name="store_maps">Add</string>
   <string name="alert_dialog_ok">Navigate to</string> 
     <string name="alert_dialog_title">Navigation</string> 
      <string name="alert_dialog_comment">Do you want to navigate to this store ?</string> 
    <string name="alert_dialog_cancel">Cancel</string>
    
    <string name="basket_location">Shopping</string>
    <string name="basket_delete">Delete item</string>
	<string name="maps_list">Stores list</string>
	<string name="list_maps">Stores maps</string>
    <string name="multiautocompletetextview">MultiAutoCompleteTextView</string>
    <string name="entrez_un_produit">Add a product</string>
    <string name="fragment_main_basket">Add to basket</string>
    <string name="trouver_le_plus_proche">Find the closest</string>
      <string name="fragment_main_buy">Buy</string>
        <string name="fragment_main_hint">Enter a product to find</string>
	 <string name="title_activity_credits">Credits</string>
    <string name="fragment_main_toast">This article doesn\'t exist</string>
     <string name="maps_toast_proximity">No store in proximity, all stores are displayed</string>

</resources>
