<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.itii.biomarket.MainActivity" >

    <item
        android:id="@+id/menu_basket_delete"
        android:icon="@drawable/ic_action_navigation_close"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/basket_delete"/>

      <item
        android:id="@+id/menu_basket_up"
        android:icon="@drawable/ic_action_navigation_expand_more"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/basket_up"/>
       <item
        android:id="@+id/menu_basket_down"
        android:icon="@drawable/ic_action_navigation_expand_less"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/basket_down"/>
   
</menu>
